--- a/index.html
+++ b/index.html
@@ -8,6 +8,34 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <header>
+    <nav class="navbar">
+      <div class="container">
+        <a href="#" class="navbar-logo"><img src="img/Logo.svg" width="100" height="24" alt="Stellar Soft"></a>
+        <button class="navbar-toggler"><img src="img/navbar-toggler.svg" width="24" height="24" alt=""></button>
+        <a href="#" class="shopping-cart">
+          <img src="img/cart-icon.svg" width="24" height="24" alt="Open a shopping cart">
+        </a>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="#" class="nav-link">New & Featured</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Men</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Women</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Kids</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <section class="hero">
+
+  </section>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
 
 <script src="js/index.js"></script>
 </body>
