--- a/index.html
+++ b/index.html
@@ -31,6 +31,53 @@
 
   </section>
   <main>
+    <!--    Featured Collection Section Starts-->
+    <section class="section featured-collection">
+      <div class="container">
+        <div class="section-header">
+          <h2 class="section-title">Featured Collection</h2>
+        </div>
+        <div class="product-list">
+          <div class="product-item">
+            <div class="item-thumb">
+              <img src="img/featured/nike-streakfly-2.webp" width="312" height="312" alt="Nike Streakfly 2 Sneakers">
+            </div>
+            <div class="item-details">
+              <h5 class="item-name">Nike Streakfly 2</h5>
+              <p class="item-price">$300.00</p>
+            </div>
+          </div>
+          <div class="product-item">
+            <div class="item-thumb">
+              <img src="img/featured/nike-pegasus-premium.webp" width="312" height="312" alt="Nike Pegasus Premium Sneakers">
+            </div>
+            <div class="item-details">
+              <h5 class="item-name">Nike Pegasus Premium</h5>
+              <p class="item-price">$350.00</p>
+            </div>
+          </div>
+          <div class="product-item">
+            <div class="item-thumb">
+              <img src="img/featured/nike-pegasus-41.webp" width="312" height="312" alt="Nike Pegasus 41 Sneakers">
+            </div>
+            <div class="item-details">
+              <h5 class="item-name">Nike Pegasus 41</h5>
+              <p class="item-price">$280.00</p>
+            </div>
+          </div>
+          <div class="product-item">
+            <div class="item-thumb">
+              <img src="img/featured/nike-revolution-7.webp" width="312" height="312" alt="Nike Revolution 7 Sneakers">
+            </div>
+            <div class="item-details">
+              <h5 class="item-name">Nike Revolution 7</h5>
+              <p class="item-price">$440.00</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--    Featured Collection Section Ends-->
 
   </main>
   <footer>
