Add FAQ section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,56 @@
       </div>
     </section>
     <!--    Featured Collection Section Ends-->
+    
+    <!--    FAQ Section Starts-->
+    <section class="section bg-light-gray">
+      <div class="container small">
+        <div class="section-header">
+          <h2 class="section-title">Frequently asked questions</h2>
+          <p class="section-subtitle">Answers to our most frequently asked questions are just one click away.</p>
+        </div>
+        <ul class="question-list">
+          <li class="question-item">
+            <button type="button" class="question-title">
+              <span class="question-text">What are Nike's delivery options?</span>
+              <span class="icon"></span>
+            </button>
+            <div class="answer-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, corporis ea enim esse ipsum magni maxime molestias neque perspiciatis reiciendis?</p>
+            </div>
+          </li>
+          <li class="question-item">
+            <button type="button" class="question-title">
+              <span class="question-text">What is Nike's returns policy?</span>
+              <span class="icon"></span>
+            </button>
+            <div class="answer-text">
+              <p>When you shop Nike online, either in the Nike App or on Nike.com, you can return items that are unworn and unwashed and still have their product tags attached within 30 days of purchase (some exceptions apply). That includes custom Nike By You sneakers.</p>
+            </div>
+          </li>
+          <li class="question-item">
+            <button type="button" class="question-title">
+              <span class="question-text">Where is my Nike order?</span>
+              <span class="icon"></span>
+            </button>
+            <div class="answer-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, corporis ea enim esse ipsum magni maxime molestias neque perspiciatis reiciendis?</p>
+            </div>
+          </li>
+          <li class="question-item">
+            <button type="button" class="question-title">
+              <span class="question-text">How do I find the right size and fit?</span>
+              <span class="icon"></span>
+            </button>
+            <div class="answer-text">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, corporis ea enim esse ipsum magni maxime molestias neque perspiciatis reiciendis?</p>
+            </div>
+          </li>
+        </ul>
+      </div>
 
+    </section>
+    <!--    FAQ Section Ends-->
   </main>
   <footer>
 
