--- a/index.html
+++ b/index.html
@@ -130,7 +130,69 @@
     <!--    FAQ Section Ends-->
   </main>
   <footer>
-
+    <div class="container">
+      <div class="footer-nav">
+        <div class="footer-menu">
+          <button type="button" class="footer-nav-title">
+            <span class="title">Resources</span>
+            <img src="img/down-small.svg" alt="" width="9" height="5" class="icon">
+          </button>
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item"><a href="#" class="footer-link">Find a Store</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Nike Journal</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Become a Member</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Feedback</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Promo Codes</a></li>
+          </ul>
+        </div>
+        <div class="footer-menu">
+          <button type="button" class="footer-nav-title">
+            <span class="title">Help</span>
+            <img src="img/down-small.svg" alt="" width="9" height="5" class="icon">
+          </button>
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item"><a href="#" class="footer-link">Get Help</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Order Status</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Shipping and Delivery</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Returns</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Payment Options</a></li>
+          </ul>
+        </div>
+        <div class="footer-menu">
+          <button type="button" class="footer-nav-title">
+            <span class="title">Company</span>
+            <img src="img/down-small.svg" alt="" width="9" height="5" class="icon">
+          </button>
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item"><a href="#" class="footer-link">About Nike</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">News</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Careers</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Investors</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Sustainability</a></li>
+          </ul>
+        </div>
+        <div class="footer-menu">
+          <button type="button" class="footer-nav-title">
+            <span class="title">Menu</span>
+            <img src="img/down-small.svg" alt="" width="9" height="5" class="icon">
+          </button>
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item"><a href="#" class="footer-link">New & Featured</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Men</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Women</a></li>
+            <li class="footer-nav-item"><a href="#" class="footer-link">Kids</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-copyright">
+        <div class="copyright-content">© <span id="copyrightYear"></span> Nike, Inc. All rights reserved</div>
+        <ul class="policies-list">
+          <li><a href="#" class="footer-link">Terms of Use</a></li>
+          <li><a href="#" class="footer-link">Privacy & Cookie Policy</a></li>
+          <li><a href="#" class="footer-link">Privacy & Cookie Setting</a></li>
+        </ul>
+      </div>
+    </div>
   </footer>
 
 <script src="js/index.js"></script>
