Add Product Card section and render data to it

--- a/index.html
+++ b/index.html
@@ -128,6 +128,27 @@
 
     </section>
     <!--    FAQ Section Ends-->
+
+<!--    Product Card Section Starts-->
+    <section class="section">
+      <div class="container product-card">
+      <div class="product-images">
+        <div class="main-image"><img src="" width="536" height="670" alt="">
+        </div>
+        <div class="product-gallery"></div>
+      </div>
+        <div class="product-info">
+          <h2 class="product-title"></h2>
+          <p class="product-price"></p>
+          <div class="color-options"></div>
+          <div class="size-options"></div>
+          <button class="add-to-cart">Add to Cart</button>
+          <p class="product-description"></p>
+        </div>
+
+      </div>
+    </section>
+    <!--    Product Card Section Ends-->
   </main>
   <footer>
     <div class="container">
