Set up Collection Slider swiper

--- a/index.html
+++ b/index.html
@@ -78,43 +78,55 @@
         <div class="section-header">
           <h2 class="section-title">Featured Collection</h2>
         </div>
-        <div class="product-list">
-          <div class="product-item">
-            <div class="item-thumb">
-              <img src="img/featured/nike-streakfly-2.webp" width="312" height="312" alt="Nike Streakfly 2 Sneakers">
+        <div class="swiper collection-slider">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="product-item">
+              <div class="item-thumb">
+                <img src="img/featured/nike-streakfly-2.webp" width="312" height="312" alt="Nike Streakfly 2 Sneakers">
+              </div>
+              <div class="item-details">
+                <h5 class="text-large">Nike Streakfly 2</h5>
+                <p class="text-secondary">$300.00</p>
+              </div>
             </div>
-            <div class="item-details">
-              <h5 class="text-large">Nike Streakfly 2</h5>
-              <p class="text-secondary">$300.00</p>
+            </div>
+            <div class="swiper-slide">
+              <div class="product-item">
+              <div class="item-thumb">
+                <img src="img/featured/nike-pegasus-premium.webp" width="312" height="312" alt="Nike Pegasus Premium Sneakers">
+              </div>
+              <div class="item-details">
+                <h5 class="text-large">Nike Pegasus Premium</h5>
+                <p class="text-secondary">$350.00</p>
+              </div>
+            </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="product-item">
+                <div class="item-thumb">
+                  <img src="img/featured/nike-pegasus-41.webp" width="312" height="312" alt="Nike Pegasus 41 Sneakers">
+                </div>
+                <div class="item-details">
+                  <h5 class="text-large">Nike Pegasus 41</h5>
+                  <p class="text-secondary">$280.00</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="product-item">
+                <div class="item-thumb">
+                  <img src="img/featured/nike-revolution-7.webp" width="312" height="312" alt="Nike Revolution 7 Sneakers">
+                </div>
+                <div class="item-details">
+                  <h5 class="text-large">Nike Revolution 7</h5>
+                  <p class="text-secondary">$440.00</p>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="product-item">
-            <div class="item-thumb">
-              <img src="img/featured/nike-pegasus-premium.webp" width="312" height="312" alt="Nike Pegasus Premium Sneakers">
-            </div>
-            <div class="item-details">
-              <h5 class="text-large">Nike Pegasus Premium</h5>
-              <p class="text-secondary">$350.00</p>
-            </div>
-          </div>
-          <div class="product-item">
-            <div class="item-thumb">
-              <img src="img/featured/nike-pegasus-41.webp" width="312" height="312" alt="Nike Pegasus 41 Sneakers">
-            </div>
-            <div class="item-details">
-              <h5 class="text-large">Nike Pegasus 41</h5>
-              <p class="text-secondary">$280.00</p>
-            </div>
-          </div>
-          <div class="product-item">
-            <div class="item-thumb">
-              <img src="img/featured/nike-revolution-7.webp" width="312" height="312" alt="Nike Revolution 7 Sneakers">
-            </div>
-            <div class="item-details">
-              <h5 class="text-large">Nike Revolution 7</h5>
-              <p class="text-secondary">$440.00</p>
-            </div>
-          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
         </div>
       </div>
     </section>
