Add Contact Form section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="slide bg-slide-1">
             <div class="slide-container">
               <div class="slide-content">
-                <h1>More than just shoes — it’s a part of your story.</h1>
+                <h1 class="uppercase">More than just shoes — it’s a part of your story.</h1>
                 <p>Original sneakers from Nike and other top brands that make every step feel special.</p>
               </div>
               <button class="btn btn-white shop-collection">Shop the Collection</button>
@@ -198,7 +198,6 @@
           </li>
         </ul>
       </div>
-
     </section>
     <!--    FAQ Section Ends-->
 
@@ -245,10 +244,43 @@
             <p class="product-description text-secondary text-medium"></p>
           </div>
         </div>
-
       </div>
     </section>
     <!--    Product Card Section Ends-->
+    <!--  Contact Form Section starts  -->
+    <section class="section bg-light-gray">
+      <div class="container small">
+        <div class="section-header">
+          <h2 class="section-title">Need help?</h2>
+        </div>
+        <form class="contact-form">
+          <div class="grid-container">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" id="name" placeholder="Enter Name" required>
+            </div>
+            <div class="form-group">
+              <label for="number">Number</label>
+              <input type="text" id="number" placeholder="Enter Number">
+            </div>
+
+            <div class="form-group full">
+              <label for="email">Email</label>
+              <input type="email" id="email" placeholder="Enter Email">
+            </div>
+
+            <div class="form-group full">
+              <label for="message">Message</label>
+              <textarea id="message" placeholder="Enter Message"></textarea>
+            </div>
+          </div>
+          <div class="form-submit">
+            <button type="submit" class="btn btn-black">Submit</button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <!--  Contact Form Section starts  -->
   </main>
   <footer>
     <div class="container">
