Refactor Hero Section

--- a/index.html
+++ b/index.html
@@ -32,40 +32,33 @@
     </nav>
   </header>
   <section class="hero">
+    <div class="hero-content">
+      <div class="inner-container">
+        <h1 class="uppercase">More than just shoes — it’s a part of your story.</h1>
+        <p>Original sneakers from Nike and other top brands that make every step feel special.</p>
+      </div>
+      <button class="btn btn-white shop-collection">Shop the Collection</button>
+    </div>
     <!-- Slider main container -->
     <div class="hero-slider swiper">
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide">
-          <div class="slide bg-slide-1">
-            <div class="slide-container">
-              <div class="slide-content">
-                <h1 class="uppercase">More than just shoes — it’s a part of your story.</h1>
-                <p>Original sneakers from Nike and other top brands that make every step feel special.</p>
-              </div>
-              <button class="btn btn-white shop-collection">Shop the Collection</button>
-            </div>
+          <div class="slide">
+            <img src="img/hero-slide1-1280.webp" alt="Hero banner" srcset="img/hero-slide1-768.webp 768w, img/hero-slide1-1280.webp 1280w, img/hero-slide1-1920.webp 1920w" sizes="(max-width: 768px) 100vw, (max-width: 1280px) 100vw, 1920px">
           </div>
         </div>
-        <div class="swiper-slide"><div class="slide bg-slide-2">
-          <div class="slide-container">
-            <div class="slide-content">
-              <h1>More than just shoes — it’s a part of your story.</h1>
-              <p>Original sneakers from Nike and other top brands that make every step feel special.</p>
-            </div>
-            <button class="btn btn-white shop-collection">Shop the Collection</button>
-          </div>
-        </div></div>
-        <div class="swiper-slide"><div class="slide bg-slide-3">
-          <div class="slide-container">
-            <div class="slide-content">
-              <h1>More than just shoes — it’s a part of your story.</h1>
-              <p>Original sneakers from Nike and other top brands that make every step feel special.</p>
-            </div>
-            <button class="btn btn-white shop-collection">Shop the Collection</button>
-          </div>
-        </div></div>
+        <div class="swiper-slide">
+          <div class="slide">
+          <img src="img/hero-slide2-1280.webp" alt="Hero banner" srcset="img/hero-slide2-768.webp 768w, img/hero-slide2-1280.webp 1280w, img/hero-slide2-1920.webp 1920w" sizes="(max-width: 768px) 100vw, (max-width: 1280px) 100vw, 1920px">
+        </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="slide">
+          <img src="img/hero-slide3-1280.webp" alt="Hero banner" srcset="img/hero-slide3-768.webp 768w, img/hero-slide3-1280.webp 1280w, img/hero-slide3-1920.webp 1920w" sizes="(max-width: 768px) 100vw, (max-width: 1280px) 100vw, 1920px">
+        </div>
+        </div>
       </div>
       <!-- If we need pagination -->
       <div class="swiper-pagination"></div>
