Add a popup Modal with email form

--- a/index.html
+++ b/index.html
@@ -341,6 +341,28 @@
     </div>
   </footer>
 
+  <div class="modal" id="emailModal">
+      <div class="modal-container">
+        <button class="modal-close"><img src="img/icons/close.svg" width="16" height="16" alt=""></button>
+        <div class="modal-content">
+          <div class="modal-header">
+            <h2 class="h1 uppercase">Here’s $10 Off Your First Order!</h2>
+            <p>Join our newsletter and get a $10 discount code sent straight to your inbox. New customers only.</p>
+          </div>
+          <form class="modal-form">
+            <div class="form-group">
+              <label for="modalEmail">Email</label>
+              <input type="email" id="modalEmail" placeholder="Enter email">
+            </div>
+            <button class="btn btn-black">Send</button>
+          </form>
+        </div>
+        <div class="modal-img">
+          <img src="img/popup-banner.webp" alt="Popup banner">
+        </div>
+      </div>
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="js/index.js"></script>
 </body>
