--- a/index.html
+++ b/index.html
@@ -16,18 +16,16 @@
     <nav class="navbar">
       <div class="container">
         <a href="#" class="navbar-logo"><img src="img/Logo.svg" width="100" height="24" alt="Stellar Soft"></a>
-        <button class="navbar-toggler"><img src="img/icons/navbar-toggler.svg" width="24" height="24" alt=""></button>
+        <button class="navbar-toggler" aria-label="Toggle navigation menu"><img src="img/icons/navbar-toggler.svg" width="24" height="24"></button>
         <a href="#" class="shopping-cart">
           <img src="img/icons/cart-icon.svg" width="24" height="24" alt="Open a shopping cart">
         </a>
-        <div class="collapse navbar-collapse">
           <ul class="navbar-nav">
             <li class="nav-item"><a href="#" class="nav-link">New & Featured</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Men</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Women</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Kids</a></li>
           </ul>
-        </div>
       </div>
     </nav>
   </header>
@@ -343,7 +341,7 @@
 
   <div class="modal" id="emailModal">
       <div class="modal-container">
-        <button class="modal-close"><img src="img/icons/close.svg" width="16" height="16" alt=""></button>
+        <button class="modal-close" aria-label="Toggle navigation menu"><img src="img/icons/close.svg" width="16" height="16"></button>
         <div class="modal-content">
           <div class="modal-header">
             <h2 class="h1 uppercase">Here’s $10 Off Your First Order!</h2>
